<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Agent Mate</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="UserName">username</string>
    <string name="str_login">Log In</string>
    <string name="str_forget">Forget?</string>
    <string name="exit">Exit</string>
    <string name="text_username">UserName</string>
    <string name="textpassword">Password</string>
    <string name="forget_view">Forget Your Password? </string>
    <string name="forget_view2">Please enter the answer for following question.</string>
    <string name="sendtoconfirm">Send To Confirm</string>

</resources>
