
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:paddingBottom="@dimen/activity_vertical_margin"
android:paddingLeft="@dimen/activity_horizontal_margin"
android:paddingRight="@dimen/activity_horizontal_margin"
android:paddingTop="@dimen/activity_vertical_margin"
tools:context=".Login_Activity" >

<ImageView
    android:id="@+id/imageView1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:adjustViewBounds="true"
    android:src="@drawable/abc"
    android:layout_alignRight="@+id/btn_submit"
    android:layout_alignParentLeft="true" />

<Button
    android:id="@+id/btn_submit"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignParentRight="true"
    android:layout_below="@+id/imageView1"
    android:layout_marginTop="16dp"
    android:text="Seeit"
    android:visibility="invisible"/>

<Button
    android:id="@+id/btn_send"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/btn_submit"
    android:layout_below="@+id/btn_submit"
    android:layout_marginTop="38dp"
    android:text="Add"
    android:visibility="invisible"/>

<LinearLayout
    android:id="@+id/linearLayout1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_alignLeft="@+id/imageView1"
    android:layout_alignTop="@+id/btn_submit"
    android:orientation="vertical"
    android:layout_gravity="center|left"
    android:layout_alignRight="@+id/btn_submit">

    <TextView
        android:id="@+id/labelforget2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/UserName"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/Edit_UserName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:id="@+id/text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textpassword"
        android:textAppearance="?android:attr/textAppearanceLarge" /><EditText android:id="@+id/Edit_Password" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_alignLeft="@+id/linearLayout1" android:layout_below="@+id/linearLayout1" android:ems="10" android:inputType="textPassword"
    android:layout_gravity="center_horizontal">
</EditText>
</LinearLayout>

<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@+id/linearLayout1"
    android:layout_centerHorizontal="true" >

    <Button
        android:id="@+id/BtnForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_forget" />

    <Button
        android:id="@+id/BtnLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/str_login" />

    <Button
        android:id="@+id/BtnExit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:visibility="invisible"/>
</LinearLayout>

</RelativeLayout>